# pick-n-place

./: README.md
aubo_robot/: README
aubo_robot/aubo_controller/: package.xml
aubo_robot/aubo_controller/src/: joint_trajectory_action.cpp
aubo_robot/aubo_description/: aubo_i5.rviz
aubo_robot/aubo_description/meshes/: End-effector.STL  End-effector.dae  workcell.STL
aubo_robot/aubo_description/urdf/: aubo_i5.urdf.xacro  aubo_i5_robot.urdf.xacro  aubo_i5_robot_gazebo.urdf.xacro
aubo_robot/aubo_driver/: CMakeLists.txt
aubo_robot/aubo_driver/include/aubo_driver/: aubo_driver.h
aubo_robot/aubo_driver/launch/: aubo_i5_bringup.launch  aubo_i5_moveit.launch
aubo_robot/aubo_driver/scripts/: action.py  action_server.py
aubo_robot/aubo_driver/src/: IO_server.cpp  aubo_driver.cpp
aubo_robot/aubo_gazebo/launch/: aubo_i5.launch
aubo_robot/aubo_i5_moveit_config/config/: controllers.yaml
aubo_robot/aubo_i5_moveit_config/launch/: aubo_i5_moveit_planning_execution.launch  demo.launch  moveit.rviz
aubo_robot/aubo_msgs/: CMakeLists.txt
aubo_robot/aubo_msgs/srv/: Move.srv  Moveit.srv
aubo_robot/aubo_panel/: CMakeLists.txt
aubo_robot/aubo_trajectory/: CMakeLists.txt
aubo_robot/aubo_trajectory/trajectory_gen/src/: trajectory_gen.cpp
aubo_robot/aubo_trajectory_filters/: CMakeLists.txt  package.xml
demo/: CMakeLists.txt  package.xml
demo/launch/: demo.launch  demo_web.launch
demo/scripts/: box_class.py  database.py  demo.py  demo_web.py  move.py
ensenso_camera/: setup.json
ensenso_camera/launch/: ensenso_camera.launch
iai_kinect2/kinect2_bridge/launch/: kinect2_bridge.launch
launch_controller/: CMakeLists.txt  package.xml  setup.py
launch_controller/launch/: launch_controller.launch
launch_controller/src/launch_controller/: function.py
launch_controller/sripts/: Aubo_real.sh  ensenso.sh  kinect.sh  launch_controller.py  tf.sh  web.sh
perception/: CMakeLists.txt  package.xml  package.xml~
perception/src/: Client.cpp  Client.cpp~  Get_pose.cpp~  Get_pose_server.cpp  Get_pose_server.cpp~  Get_pose_server_left_hand.cpp~  Get_pose_server_right_hand.cpp~  Pic_pub.cpp~  Square_detection_client.cpp  Square_detection_server.cpp  pcl_example.cpp  pcl_server.cpp  q.txt~
perception/srv/: GetPose.srv
perception_msgs/: CMakeLists.txt  package.xml
perception_msgs/srv/: GetPose.srv~  SquareDetection.srv
pick-n-place/scripts/: pose_pub.py  test.py
pick-n-place/scripts/Bin_Packing_Demo_API/: box_class.py  camera_server.py  demo.py  eef_server.py  function.py  move.py  vision_server.py
pick-n-place/scripts/Bin_Packing_Demo_Moveit/: box_class.py  box_class.py~  box_generator.py~  collision_check.py~  data.xlsx  database.py~  demo.py  demo.py~  eef_server.py  env.py  env.py~  function.py  grasp_pose.py  pack.py~  place_pose.py  plan.py~  plot.py~  ros_test.py~  vision_server.py
recongnition/: CMakeLists.txt  package.xml
recongnition/launch/: target_recognition.launch
recongnition/src/: detect_box_pick.cpp  target_recognition_service.cpp  target_recongnition_node.cpp
recongnition_msgs/: CMakeLists.txt  package.xml
ros_depthsense_camera/src/driver/src/: depthsense_camera_driver.cpp
