<?xml version="1.0"?>
<package>
  <name>recongnition_msgs</name>
  <version>0.1.0</version>
  <description>The recongnition_msgs package</description>

  <author email="wengchingyen@gmail.com">WENG, CHING-YEN</author>
  <maintainer email="wengchingyen@gmail.com">WENG, CHING-YEN</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>geometric_shapes</build_depend>
  <run_depend>geometric_shapes</run_depend>

  <build_depend>shape_msgs</build_depend>
  <run_depend>shape_msgs</run_depend>

</package>
